k8s/security/deny-all-network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-default
  namespace: soncollab
  labels:
    app: security
    policy: deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
